@@ -16,6 +16,8 @@
   15. Catalog items and mobs can now be accessed via the VFS at /resources/catalog/mobs/.. and /resources/catalog/items/.. as CMARE files.
   16. Some new multiclassing system options:  NO-BASE, NO-SUBONLY, NO-[X], and NO-GRP-[X] -- see the coffeemud.ini
   17. SHELL command now (finally) supports diff (thanks google code!).  
+  18. Similar to #15, the entire world map, down to room properties, can be accessed via VFS at /resources/map/... and also cmare files
+  
 //TODO: create/modify/destroy manufacturer
 //TODO: add electronics to guides
 //TODO: add electronics to MG
